fix(kit): BadgedContent badge misaligned inside flex parent (#4961)

--- a/projects/kit/components/badged-content/badged-content.style.less
+++ b/projects/kit/components/badged-content/badged-content.style.less
@@ -2,6 +2,7 @@
     position: relative;
     display: inline-block;
     color: var(--tui-base-01);
+    height: min-content;
 }
 
 .t-notification {
